--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <link rel="stylesheet" href="https://js.arcgis.com/4.6/esri/themes/light/main.css">
+  <link rel="stylesheet" href="https://js.arcgis.com/4.7/esri/themes/dark/main.css">
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -22,6 +22,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Baltimore|Create Map</title>
+
 </head>
 
 <body>
